--- a/2-Browsers/Week1/homework/ex2-aboutMe/index.html
+++ b/2-Browsers/Week1/homework/ex2-aboutMe/index.html
@@ -10,9 +10,9 @@
     <h1>About Me</h1>
 
     <ul>
-      <li>Nickname: <span id="nickname"></span></li>
-      <li>Favorite food: <span id="fav-food"></span></li>
-      <li>Hometown: <span id="hometown"></span></li>
+      <li style="color: red">Nickname: <span id="nickname"></span></li>
+      <li style="color: red">Favorite food: <span id="fav-food"></span></li>
+      <li style="color: red">Hometown: <span id="hometown"></span></li>
     </ul>
 
     <script src="index.js"></script>
